--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -25,7 +25,7 @@
 .discover,
 .myAccounts,
 .helps {
-  width: 15rem;
+  width: 20rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -33,7 +33,7 @@
 }
 
 .footerBox .header {
-  font-size: 2.5rem;
+  font-size: 2.2rem;
   font-weight: 500;
   font-family: "Prata", serif;
   text-transform: capitalize;
@@ -45,7 +45,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.2rem;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   text-transform: uppercase;
 }
 
@@ -54,6 +54,11 @@
   color: #1e1e1e82;
   font-weight: 500;
   letter-spacing: 1px;
+}
+
+.footerBox .links a:hover {
+  scale: 1.1;
+  color: #1e1e1e;
 }
 
 .rightsAndReserved {
