--- a/src/components/BestSellingBooks/BestSellingBooks.css
+++ b/src/components/BestSellingBooks/BestSellingBooks.css
@@ -83,6 +83,12 @@
     z-index: 1;
     transition: color 0.3s ease-in-out;
   }
+
+  .bestSellingInfos .info .buttons button a {
+    text-decoration: none;
+    color: rgb(11, 11, 11);
+    transition: color 0.3s ease-in-out;
+  }
   
   .bestSellingInfos .info .buttons button::before {
     content: "";
@@ -100,6 +106,11 @@
   
   .bestSellingInfos .info .buttons button:hover,
   .bestSellingInfos .info .buttons button:focus {
+    color: white;
+  }
+
+  .bestSellingInfos .info .buttons button:hover a,
+  .bestSellingInfos .info .buttons button:focus a {
     color: white;
   }
   
