--- a/src/components/LatestArticles/LatestArticles.css
+++ b/src/components/LatestArticles/LatestArticles.css
@@ -1,167 +1,145 @@
-.latestArticles {
+.latestArticlesContainer {
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  background-color: #f6f5f3;
   padding-top: 10rem;
-  padding-bottom: 5rem;
+  padding-bottom: 15rem;
 }
 
-.latestArticles .latestArticlesHeaders {
+.latestArticlesHeaders {
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  flex-direction: column;
   gap: 1rem;
   margin-bottom: 3rem;
 }
 
-.latestArticles .latestArticlesHeaders h1 {
-  font-family: "Prata", serif;
+.latestArticlesHeaders h1 {
   font-size: 4rem;
-  font-weight: 100;
+  font-weight: 500;
+  font-family: "Prata", serif;
   text-transform: capitalize;
-  letter-spacing: 1px;
   position: relative;
-  color: #1e1e1e;
-  padding: 0 3rem;
 }
 
-.latestArticles .latestArticlesHeaders h1:before,
-.latestArticles .latestArticlesHeaders h1:after {
+.latestArticlesHeaders h1:before,
+.latestArticlesHeaders h1:after {
   content: "";
   position: absolute;
   top: 50%;
   width: 500px;
-  height: 1.5px;
+  height: 1px;
   background-color: #6f6f6f55;
 }
 
-.latestArticles .latestArticlesHeaders h1:before {
-  left: -500px;
+.latestArticlesHeaders h1:before {
+  left: -520px;
 }
 
-.latestArticles .latestArticlesHeaders h1:after {
-  right: -500px;
+.latestArticlesHeaders h1:after {
+  right: -520px;
 }
 
-.latestArticles .latestArticlesHeaders h4 {
+.latestArticlesHeaders h3 {
   font-size: 1.5rem;
-  font-weight: 300;
+  font-weight: 400;
   text-transform: uppercase;
-  text-align: center;
 }
 
-.latestArticles .articles {
+.articlesBoxes {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   flex-wrap: wrap;
+  gap: 5rem;
 }
 
-.articlesContainer {
+.articlesBoxes .box {
+  width: 50rem;
   display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 4rem;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-.articlesBox video {
-  width: 37rem;
-  height: 65rem;
-  border-radius: 6px;
-  margin-bottom: 1rem;
+.articlesBoxes .box img {
+  width: 100%;
+  border-radius: 3px;
+  background-color: white;
+  padding: 1rem;
 }
 
-.articlesBox p {
+.articlesBoxes .box .date {
+  font-size: 1.6rem;
+  font-family: "Prata", serif;
+  font-weight: 600;
+  color: rgb(14, 14, 14);
+}
+
+.articlesBoxes .box .title {
   font-size: 1.8rem;
   font-family: "Prata", serif;
   font-weight: 500;
   text-transform: capitalize;
-  color: #1e1e1e;
-  letter-spacing: 1px;
-  margin-bottom: 1rem;
+  letter-spacing: 0.5px;
+  border-bottom: 1px solid rgba(14, 14, 14, 0.3);
+  padding-bottom: 1rem;
 }
 
-.articlesBox span {
-  display: inline-block;
-  width: 37rem;
-  font-size: 1.3rem;
-  font-weight: 400;
-  letter-spacing: 1px;
-  text-transform: capitalize;
-  border-bottom: 1px solid rgba(11, 11, 11, 0.558);
-  padding-bottom: 2rem;
-}
-
-.inspiration {
+.articlesBoxes .box .inspiration-socialMedia {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  margin-top: 1rem;
 }
 
-.inspiration p {
-  font-size: 1.5rem;
-  font-weight: 400;
-  font-family: "Roboto Flex", sans-serif;
+.articlesBoxes .box .inspiration-socialMedia .inspiration {
+  font-size: 1.4rem;
+  font-weight: 300;
   letter-spacing: 1px;
+  text-transform: capitalize;
 }
 
-.inspiration .socialMedias {
+.articlesBoxes .box .inspiration-socialMedia .socialMedia {
   display: flex;
   align-items: center;
   gap: 1.5rem;
+}
+
+.articlesBoxes .box .inspiration-socialMedia .socialMedia .socialIcon {
   font-size: 1.4rem;
-}
-
-.inspiration .socialMedias * {
   cursor: pointer;
-  color: #1e1e1e;
-  transition: 0.2s all ease-in;
 }
 
-.inspiration .socialMedias .socialFace:hover,
-.socialInstagram:hover,
-.socialTwitter:hover {
-  transform: scale(1.2);
+.articlesBoxes .box .inspiration-socialMedia .socialMedia .socialIcon:hover {
+  scale: 1.2;
 }
 
-.readAllArticles {
+.latestArticlesContainer .readAllArticles {
   position: relative;
+  width: 23rem;
 }
 
-.readAllArticles button {
-  width: 24rem;
+.latestArticlesContainer .readAllArticles button {
+  text-align: start;
+  margin-top: 5rem;
+  padding-left: 2.5rem;
+  width: 23rem;
   height: 5rem;
+  font-size: 1.5rem;
   text-transform: uppercase;
+  border: 1px solid rgb(14, 14, 14);
+  border-radius: 3px;
+  background-color: transparent;
   cursor: pointer;
+  position: relative;
   z-index: 1;
   transition: color 0.3s ease-in-out;
-  color: rgb(11, 11, 11);
-  background-color: transparent;
-  border: 1px solid rgb(11, 11, 11);
-  border-radius: 3px;
-  position: relative;
-  margin-top: 2rem;
-  letter-spacing: 2px;
-  text-align: start;
-  padding-left: 2.5rem;
-  margin-top: 5rem;
 }
 
-.readAllArticles .readAllRightArrow {
-  position: absolute;
-  bottom: 1.7rem;
-  left: 20rem;
-  font-size: 1.6rem;
-}
-
-.readAllArticles button::before {
+.latestArticlesContainer .readAllArticles button::before {
   content: "";
   position: absolute;
   top: 0;
@@ -175,67 +153,33 @@
   transform-origin: left;
 }
 
-.readAllArticles button:hover,
-.readAllArticles button:focus {
+.latestArticlesContainer .readAllArticles button:hover,
+.latestArticlesContainer .readAllArticles button:focus {
   color: white;
 }
 
-.readAllArticles button:hover::before,
-.readAllArticles button:focus::before {
+.latestArticlesContainer .readAllArticles button:hover .arrow,
+.latestArticlesContainer .readAllArticles button:focus .arrow {
+  color: white;
+}
+
+.latestArticlesContainer .readAllArticles button:hover::before,
+.latestArticlesContainer .readAllArticles button:focus::before {
   transform: scaleX(1);
 }
 
-@media screen and (max-width: 1024px) {
-  .latestArticles .latestArticlesHeaders h1 {
-    font-size: 4rem;
-  }
+.latestArticlesContainer .readAllArticles .arrow {
+  position: absolute;
+  top: 2.5rem;
+  right: 2.5rem;
+  transition: color 0.3s ease-in-out;
+}
 
-  .latestArticles .latestArticlesHeaders h1:before,
-  .latestArticles .latestArticlesHeaders h1:after {
-    opacity: 0;
-  }
-
-  .latestArticles .latestArticlesHeaders h4 {
-    font-size: 1.5rem;
-  }
-
-  .articlesContainer {
+@media screen and (max-width: 768px) {
+  .articlesBoxes .box {
+    width: 40rem;
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 2rem;
-  }
-
-  .articlesBox {
-    width: 33rem;
-  }
-
-  .articlesBox video {
-    width: 33rem;
-    height: 60rem;
-    border-radius: 3px;
-    margin-bottom: 1rem;
-  }
-
-  .articlesBox p {
-    width: 30rem;
-    font-size: 1.4rem;
-    font-family: "Prata", serif;
-    font-weight: 500;
-    text-transform: capitalize;
-    color: #1e1e1e;
-    letter-spacing: 1px;
-    margin-bottom: 1rem;
-  }
-
-  .articlesBox span {
-    display: inline-block;
-    width: 30rem;
-    font-size: 1.2rem;
-    font-weight: 400;
-    letter-spacing: 1px;
-    text-transform: capitalize;
-    border-bottom: 1px solid rgba(11, 11, 11, 0.558);
-    padding-bottom: 2rem;
+    flex-direction: column;
+    gap: 1rem;
   }
 }
